[gd_scene load_steps=8 format=2]

[ext_resource path="res://resources/PixelRPG.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Stars.tscn" type="PackedScene" id=2]
[ext_resource path="res://StartMenu.gd" type="Script" id=3]
[ext_resource path="res://resources/penie-polyarnoy-gagaryi.mp3" type="AudioStream" id=4]
[ext_resource path="res://resources/sfx_sound_neutral5.wav" type="AudioStream" id=5]
[ext_resource path="res://Cheat_codes.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 1 )

[node name="StartMenu" type="Node"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Stars" parent="." instance=ExtResource( 2 )]

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer"]
margin_left = 98.0
margin_top = 84.0
margin_right = 221.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 1 )
text = "try SPACE to START"
align = 1
valign = 1

[node name="Try_it" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="Loon" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 6.163

[node name="Timer_to_play" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="SpaceSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Cheat_codes" parent="." instance=ExtResource( 6 )]

[connection signal="timeout" from="Try_it" to="." method="_on_Try_it_timeout"]
[connection signal="timeout" from="Timer_to_play" to="." method="_on_Timer_to_play_timeout"]
[connection signal="cheat_detected" from="Cheat_codes" to="." method="_on_Cheat_codes_cheat_detected"]
